Fix css spacing

--- a/src/components/loginforms.css
+++ b/src/components/loginforms.css
@@ -1,5 +1,5 @@
 .container-policy {
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
